--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,31 @@
 [package]
+edition = "2021"
 name = "kaibai_store_service"
 version = "0.1.0"
-edition = "2021"
 
 [dependencies]
+actix = "0.13.5"
+actix-cors = "0.7.0"
+actix-rt = "2.10.0"
+actix-web = "4"
+chrono = "0.4.31"
+derive_more = {version = "1.0.0", features = ['full']}
+env = "0.1.0"
+env_logger = "0.11.5"
+futures-util = "0.3.31"
+lazy-regex = "3.3.0"
+lazy_static = "1.5.0"
+log = {version = "0.4.20", features = ["std", "serde"]}
+once_cell = "1.20.2"
+rbatis = {version = "4.5"}
+rbdc-mysql = "4.5.0"
+rbs = {version = "4.5"}
+redis = {version = "0.27.5", features = ["tokio-comp", "cluster"]}
+redis-macros = "0.4.2"
+rs_service_util = {git = "https://github.com/Hemp-bandit/rs_service_util.git"}
+serde = {version = "1", features = ["derive"]}
+serde_json = "1"
+tokio_schedule = "0.3.2"
+utoipa = {version = "5.2.0", features = ["actix_extras"]}
+utoipa-actix-web = "0.1"
+utoipa-scalar = {version = "0.2.0", features = ["actix-web"]}
