--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ rbdc-mysql = "4.5.0"
 rbs = {version = "4.5"}
 redis = {version = "0.27.5", features = ["tokio-comp", "cluster"]}
 redis-macros = "0.4.2"
-rs_service_util = {git = "https://github.com/Hemp-bandit/rs_service_util.git"}
+rs_service_util = {git = "https://github.com/Hemp-bandit/rs_service_util.git", branch= "dev"}
 serde = {version = "1", features = ["derive"]}
 serde_json = "1"
 tokio_schedule = "0.3.2"
