--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,15 +17,19 @@ lazy-regex = "3.3.0"
 lazy_static = "1.5.0"
 log = {version = "0.4.20", features = ["std", "serde"]}
 once_cell = "1.20.2"
+
 rbatis = {version = "4.5"}
 rbdc-mysql = "4.5.0"
 rbs = {version = "4.5"}
 redis = {version = "0.27.5", features = ["tokio-comp", "cluster"]}
 redis-macros = "0.4.2"
-rs_service_util = {git = "https://github.com/Hemp-bandit/rs_service_util.git", branch= "dev"}
 serde = {version = "1", features = ["derive"]}
 serde_json = "1"
 tokio_schedule = "0.3.2"
 utoipa = {version = "5.2.0", features = ["actix_extras"]}
 utoipa-actix-web = "0.1"
 utoipa-scalar = {version = "0.2.0", features = ["actix-web"]}
+
+# rs_service_util = {git = "https://github.com/Hemp-bandit/rs_service_util.git", branch= "dev"}
+http_error_macro = {path = "../http_error_macro"}
+rs_service_util = {path = "../rs_service_utill"}
