--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DATABASE_URL=mysql://root:WYSwill4290@kaibai.cloud:3309/kaibai_store
 REDIS_URL=redis://:WYSwill4290@kaibai.cloud:6380/1
-RUST_LOG=kaibai_store_service,actix_web,rbatis,rs_service_util
+RUST_LOG=kaibai_store_service,actix_web,rbatis,rs_rs_service_util
 RUST_BACKTRACE=full
 CORN=true
