--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ REDIS_URL=redis://:WYSwill4290@kaibai.cloud:6380/1
 RUST_LOG=kaibai_store_service,actix_web,rbatis,rs_rs_service_util
 RUST_BACKTRACE=full
 CORN=true
+REDIS_KEY=store_service
