--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,10 @@ jobs:
           echo "git clone "
           git clone  https://github.com/Hemp-bandit/kaibai_store_service .
           ls -al
+      - uses: landtechnologies/k8s-toolbox@v6
+        with:
+          kubectl: "v1.18.10"
+          kube-config: ${{secrets.KUBE_CONFIG}}
       - name: login_registry
         run: kubectl version
 
