--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,4 +18,4 @@ jobs:
         uses: steebchen/kubectl@v2.0.0
         with: # defaults to latest kubectl binary version
           config: ${{ secrets.KUBE_CONFIG }}
-          command: docker_tag=${{env.docker_tag}};  set image --record deployment/kaibai-store-deployment container=${{ docker_tag }}
+          command: set image --record deployment/kaibai-store-deployment container=registry.cn-hangzhou.aliyuncs.com/wyswill_docker/kaibai_store_service:${{ github.sha }}
