feat: 接口完善 & 类型工具添加

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ RUST_LOG=kaibai_store_service,actix_web,rbatis,rs_rs_service_util
 RUST_BACKTRACE=full
 CORN=true
 REDIS_KEY=store_service
+USER_SERVICE=http://kaibai.cloud:30000
