--- a/kaibai_store_service.yml
+++ b/kaibai_store_service.yml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: kaibai-store-deployment
-  namespace: kaibai
+  namespace: default
 spec:
   selector:
     matchLabels:
@@ -35,7 +35,9 @@ spec:
               value: "full"
             - name: CORN
               value: "false"
-          image: registry.cn-hangzhou.aliyuncs.com/wyswill_docker/kaibai_store_service:91652d06
+            - name: USER_SERVICE
+              value: "http://10.1.17.84:3000"
+          image: registry.cn-hangzhou.aliyuncs.com/wyswill_docker/kaibai_store_service:2d4583eb
           ports:
             - containerPort: 3001
           resources:
@@ -50,7 +52,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: kaibai-store-svc
-  namespace: kaibai
+  namespace: default
   labels:
     app: kaibai-store
 spec:
